# data-innovation-summit

./: .gitignore  README.md  demo_plan.md
dashboard-api/: Dockerfile  README.md  package.json
dashboard-api/src/: db.ts  index.ts  queries.ts  views.ts
dashboard-web/: .dockerignore  Dockerfile  README.md  index.html  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
dashboard-web/dist-server/: index.js
dashboard-web/server/: index.ts
dashboard-web/src/: App.tsx  api.ts  styles.css
dashboard-web/src/components/: Kpi.tsx  LiveFeed.tsx  OrdersChart.tsx  RegionChart.tsx  TopProducts.tsx
datahub-lightdash-source/: README.md  _PLANNING.md  pyproject.toml
datahub-lightdash-source/recipes/: dbt_aiven_demo.yml  lightdash_aiven_demo.yml  lightdash_dryrun.yml
datahub-lightdash-source/src/datahub_lightdash_source/: __init__.py  client.py  config.py  models.py  report.py  source.py
datahub-lightdash-source/tests/unit/: test_client.py  test_config.py  test_source.py
kafka-connect-lineage/: README.md
kafka-connect-lineage/poc/: docker-compose-aiven-datahub.yml  docker-compose-datahub.yml  openlineage-aiven-datahub.yml  openlineage-datahub.yml
kafka-connect-lineage/poc/debezium/: connector-config-no-smt.json  connector-config-staging.json  connector-config.json
kafka-connect-lineage/poc/jdbc-sink/: connector-config-no-smt.json  connector-config-search.json  (+2 more)
kafka-connect-lineage/smt-java/: build.gradle.kts  gradlew  settings.gradle.kts
kafka-connect-lineage/smt-kotlin/: build.gradle.kts  settings.gradle.kts
scripts/: README.md  ch_inspect.py  datahub_diag.py  datahub_emit_view_lineage.py  datahub_fix.py  datahub_glossary.py  dbt_render_compiled.py  lightdash_dashboard.py  lightdash_run_dbt.py  lightdash_views.sql  render_views.py
webshop-simulator/: README.md  package.json  tsconfig.json
webshop-simulator/src/: backfill.ts  catalog.ts  db.ts  index.ts  marketing.ts  schema.ts  simulator.ts
(+32 files in other folders)
