[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-lightdash-source"
version = "0.1.0"
description = "DataHub ingestion source for Lightdash — projects, spaces, dashboards, charts, and warehouse lineage."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Stan Dmitriev", email = "stan.dmitriev@aiven.io"},
]
keywords = ["datahub", "metadata", "lightdash", "lineage", "bi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "acryl-datahub>=0.14.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "responses>=0.23",
    "ruff>=0.4",
    "mypy>=1.5",
    "types-requests",
]

[project.entry-points."datahub.ingestion.source.plugins"]
lightdash = "datahub_lightdash_source.source:LightdashSource"

[project.urls]
Homepage = "https://github.com/StanDmitrievAiven/datahub-lightdash-source"
Issues = "https://github.com/StanDmitrievAiven/datahub-lightdash-source/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datahub_lightdash_source = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
